# crospi_application_template

./: .gitignore  .gitmodules  CMakeLists.txt  DELETEME_generate_json_schemas_plugins.bash  README.md  configure_template.sh  generate_json_schemas_plugins.bash  generate_json_schemas_plugins.py  generate_json_schemas_tasks.bash  json_schema_bundler.py  package.xml  template_driver_etasl.code-workspace
.github/workflows/: gitlab-mirror.yml
applications/application_example_iiwa_kul/: application_example_iiwa_kul.setup.json  application_example_iiwa_kul_simulation.setup.json
applications/application_example_tutorials/: application_example_tutorials.launch.py  application_example_tutorials.setup.json
applications/application_example_ur10/: application_example_ur10.launch.py  application_example_ur10.setup.json  application_example_ur10_simulation.setup.json
applications/application_example_ur10e/: application_example_ur10e.launch.py  application_example_ur10e.setup.json  launch_test.launch.py
applications/application_left_iiwa/: application_left_kuka_iiwa.setup copy.json  application_left_kuka_iiwa.setup.json  application_left_kuka_iiwa_setup.launch.py
applications/application_neura_maira7M/: application_neura_maira7M.launch.py  application_neura_maira7M.setup.json  calibration_neura_maira7M.launch.py
applications/application_robelix/: README.md  application_robelix_cable_routing.py  application_robelix_fixed.launch.py  application_robelix_fixed.setup.json  application_robelix_mav_kalman_filter.setup.json  application_robelix_mav_test.setup.json  application_robelix_mobile.launch.py  application_robelix_mobile.setup.json  demo_ur10e.launch.py  launch_etasl_with_rosbag.launch.py  route_utils.py  routing_action_server.py
applications/application_robelix/parameters/: application_params.json
config_files/: config_kuka_iiwa_realrobot.json  config_kuka_iiwa_simulation.json  config_ur10_simulation.json
coordination/fsm/betfsm/task_configuration/: up_and_down_etasl_example.json
coordination/fsm/yasmin/: etasl_yasmin_utils.py  kuka_iiwa_test_yasmin.py  nested_sequence_action.py  nested_sequence_example_etasl.py  nested_sequence_iiwa_test.py  sequence_example_etasl.py  test_json_schema.py
coordination/fsm/yasmin/task_configuration/: nested_sequence_action.json  nested_sequence_example_etasl.json  nested_sequence_iiwa_test.json
coordination_deleteme/fsm/yasmin/: send_movingdown.sh
coordination_deleteme/fsm/yasmin/old_code/: sequence_nested_monitor_etasl.py
coordination_deleteme/fsm/yasmin/task_configuration/: nested_sequence_example_etasl.json
deleteme/: sine_wave_tf.py
deleteme/config_files_deleteme/: config_kuka_iiwa_realrobot.json  config_kuka_iiwa_simulation.json  config_ur10_simulation.json
deleteme/coordination_deleteme/fsm/betfsm/: up_and_down_etasl_example.py
deleteme/coordination_deleteme/fsm/yasmin/: etasl_yasmin_utils.py  nested_sequence_action.py  nested_sequence_example_etasl.py  nested_sequence_iiwa_test.py  send_action.sh  send_movingup.sh  test_json_schema.py
etasl/: tasks-schema.json  test_task_instances.json
etasl/robot_specifications/: kuka_iiwa.etasl.lua  ur10.etasl.lua
etasl/task_json_schemas/: readme.md
etasl/task_specifications/: dummy_task.etasl.lua  etasl_json_schema_generator.lua  kuka_iiwa_jointspace_trap.etasl.lua  kuka_iiwa_test.etasl.lua  markus_task.etasl.lua  move_cartesianspace.etasl.lua  move_jointspace_trap.etasl.lua  move_joystick.etasl.lua
etasl/task_specifications/old_files/: kuka_iiwa_jointspace_trap.etasl.lua  kuka_iiwa_test.etasl.lua  ramasa.etasl.lua
example_nodes/: pose_msg_to_tf.py
launch/: load_kuka_iiwa_setup.launch.py  load_ur10_setup.launch.py
launch_deleteme/: load_kuka_iiwa_setup.launch.py
nodes/: pose_msg_to_tf.py  sine_wave_tf.py  twist_transformation_mav.py
robot_description/urdf/ur10/: use_case_setup_ur10.urdf  use_case_setup_ur10.urdf.xacro
robot_models/robot_specifications/: kuka_iiwa.etasl.lua  left_kuka_iiwa.etasl.lua  robelix_neura.etasl.lua  robelix_neura_fixture_initial_pos.etasl.lua  robelix_neura_spherical_virtual_fixture.etasl.lua  ur10.etasl.lua  ur10e.etasl.lua
robot_models/urdf_models/robot_setups/kuka_iiwa/: use_case_setup_iiwa.urdf.xacro
robot_models/urdf_models/robot_setups/left_kuka_iiwa/: rviz_config.rviz  use_case_setup_iiwa.urdf  use_case_setup_iiwa.urdf.xacro
robot_models/urdf_models/robot_setups/neura_maira7M/: rviz_config.rviz  use_case_setup_neura_maira7M.urdf  use_case_setup_neura_maira7M.urdf.xacro
robot_models/urdf_models/robot_setups/robelix/: rviz_config_fixed.rviz  use_case_setup_robelix_fixed.urdf  use_case_setup_robelix_fixed.urdf.xacro  use_case_setup_robelix_mobile.urdf  use_case_setup_robelix_mobile.urdf.xacro
robot_models/urdf_models/robot_setups/ur10/: robot_tools.urdf.xacro  use_case_setup_ur10.urdf  use_case_setup_ur10.urdf.xacro
robot_models/urdf_models/robot_setups/ur10e/: rviz_config.rviz  use_case_setup_ur10e.urdf  use_case_setup_ur10e.urdf.xacro
schemas/: blackboard-schema.json  iohandlers.json  robot.json
skill_specifications/libraries/cable_routing_lib/: skill_library.json
skill_specifications/libraries/cable_routing_lib/skill_specifications/: betfsm_channel_fixture_skill.py  betfsm_initial_skills.py  betfsm_pickup_fixture_skill.py  betfsm_pivot_fixture_skill.py  gripper_actions.py
skill_specifications/libraries/example_robelix/: skill_library.json
skill_specifications/libraries/mav_control_lib/: skill_library.json
skill_specifications/libraries/pcb_insertion_lib/: skill_library.json
skill_specifications/libraries/peg_insertions_robelix/: skill_library.json
skill_specifications/libraries/robelix/: skill_library.json
task_specifications/libraries/cable_manipulation_lib/: task_library.json
task_specifications/libraries/insertions_lib/: guarded_rx_world.etasl.lua  guarded_x_world.etasl.lua  guarded_y_world.etasl.lua  guarded_z_world.etasl.lua  task_library.json
task_specifications/libraries/shared_autonomy_lib/: TODO_task_library.json
tutorial_examples/: start_a_task.py  tasks.json
(+93 files in other folders)
